@@ -93,6 +93,7 @@ Version 1.11.1+svn:
    * Make drakes fly on volcano tiles (bug #20485).
    * Added a FOREACH macro to emulate C++11 for(... : ...) style loops.
    * Fixed bug #20290: No longer terminate due to a corrupt savegame.
+   * Fixed bug #19970: No longer terminate due to corrupt preferences.
 
 Version 1.11.1:
  * AI:
